tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__logical_operator__or.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/logical_operator/or.lox
---
success: true
exit_code: 0
----- stdout -----
1
1
true
false
false
false
true

----- stderr -----
