tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__logical_operator__or_truth.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/logical_operator/or_truth.lox
---
success: true
exit_code: 0
----- stdout -----
ok
ok
true
0
s

----- stderr -----
